[tool.mypy]
strict = true
exclude = ["tests", "venv"]
disallow_untyped_calls = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
    "possibly-undefined"
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiomysql.*",
    "mitmproxy.*",
    "py3rijndael.*",
    "timeago.*",
    "pytimeparse.*",
    "cpuinfo.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requird_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tool.poetry]
package-mode = false
name = "bancho-py"
version = "5.3.1"
description = "An osu! server implementation optimized for maintainability in modern python"
authors = ["Akatsuki Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
async-timeout = "^5.0.1"
bcrypt = "^5.0.0"
datadog = "^0.52.1"
fastapi = "^0.121.3"
orjson = "^3.11.4"
psutil = "^7.1.3"
python-dotenv = "^1.2.1"
python-multipart = "^0.0.20"
requests = "^2.32.5"
timeago = "^1.0.16"
uvicorn = "^0.38.0"
uvloop = { markers = "sys_platform != 'win32'", version = "^0.22.1" }
winloop = { platform = "win32", version = "^0.3.1" }
py3rijndael = "^0.3.3"
pytimeparse = "^1.1.8"
pydantic = "^2.12.4"
redis = { extras = ["hiredis"], version = "^7.1.0" }
sqlalchemy = "^2.0.44"
cryptography = "^46.0.3"
tenacity = "^9.1.2"
httpx = "^0.28.1"
py-cpuinfo = "^9.0.0"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
asgi-lifespan = "^2.1.0"
respx = "^0.22.0"
tzdata = "^2025.2"
coverage = "^7.12.0"
databases = { version = "^0.9.0", extras = ["mysql"] }
python-json-logger = "^4.0.0"
anyio = "^4.11.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.1"
black = "24.1.1"
isort = "5.13.2"
autoflake = "2.2.1"
types-psutil = "5.9.5.20240205"
types-pymysql = "1.1.0.1"
types-requests = "2.31.0.20240125"
mypy = "1.8.0"
types-pyyaml = "^6.0.12.12"
sqlalchemy2-stubs = "^0.0.2a38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
